--- a/les4/ex2/style.css
+++ b/les4/ex2/style.css
@@ -5,9 +5,10 @@ body{
 }
 p{
     margin:0px;
+    line-height: 1.25em;
 }
 header{
-    background:rgb(10, 100, 204);
+    background:blue;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
@@ -60,23 +61,25 @@ nav ul li{
     text-align:center;
 }
 main{
-    width:960px;
+    width:990px;
     margin:auto;
 }
 .three{
     margin:30px 0;
     display:flex;
-    justify-content: space-between;
     align-items: flex-start;
 }
 .box{
-    width:300px;
+    box-sizing: border-box;
+    width: 300px;
+    margin:15px;
     box-sizing: border-box;
     background:white;
     padding:25px;
     display:flex;
     flex-direction: column;
     align-items: flex-start;
+    border-radius: 3px;
 }
 .box h3{
     margin:20px 0 5px;
@@ -93,14 +96,125 @@ main{
 }
 .center-text{
     width:600px;
-    margin:auto;
+    margin:30px auto;
 }
 .tile{
     box-sizing: border-box;
     background:white;
     padding:25px;
     min-height:30px;
+    border-radius:3px;
 }
 .part-1{
     display:flex;
+}
+div.part-1 .tile{
+    width: 300px;
+    margin:15px;
+}
+.part-2{
+    display:flex;
+}
+.part-2-a{
+    margin:15px;
+    width:630px;
+    display:flex;
+    flex-direction: column;
+}
+.part-2-b{
+    margin:15px;
+    width:300px;
+}
+.part-2-a1{
+    margin-bottom:15px;
+    display:flex;
+    flex-grow:2;
+}
+.part-2-a2{
+    margin-top:15px;
+    flex-grow:1;
+}
+div.part-2-a1 .left{
+    display:flex;
+    flex-direction:column;
+    width:300px;
+    margin-right:15px;
+}
+div.part-2-a1 .right{
+    width:300px;
+    margin-left:15px;
+}
+div.part-2-a1 img{
+    width:100%;
+}
+div.part-2-a1 div.left .tile{
+    flex-grow:1;
+}
+div.part-2-a1 div.left .tile:first-of-type{
+    margin-bottom:30px;
+}
+.title{
+    font-size:1.5em;
+    font-weight:bold;
+    margin-bottom:10px;
+    color:blue;
+}
+.subtitle{
+    font-size:1.25em;
+    margin-bottom:10px;
+
+}
+.part-3, .part-4{
+    display:flex;
+}
+.left-3{
+    margin:15px;
+    width:300px;
+}
+.right-3{
+    margin:15px;
+    width:630px;
+}
+.left-4{
+    margin:15px;
+    width:630px;
+}
+.right-4{
+    margin:15px;
+    width:300px;
+}
+footer{
+    margin-top:45px;
+    width:100%;
+    background:white;
+    padding:30px 0px;
+}
+footer .columns{
+    display:flex;
+    width:750px;
+    margin:auto;
+}
+footer ul, li{
+    margin:0;
+    padding:0;
+}
+footer li{
+    list-style-type: none;
+    line-height:1.6em;
+}
+a{
+    text-decoration:none;
+    color:black;
+}
+a:hover{
+    border-bottom:2px solid blue;
+}
+footer .column{
+    width:250px;
+}
+footer .title{
+    font-size: 1em;
+}
+div.three .title{
+    margin-top:15px;
 }
